--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
           <div class="columns">
             <div class="column is-12">
               <div class="container content">
-                <img class="logo is-hidden-mobile" src="data:image/jpeg;base64,{{ logo | safe }}">
+                <img class="logo is-hidden-mobile" src="data:image/jpeg;base64,{{ userlogo | safe }}">
                 <h1 class="title">neos-community.events</h1>
                 <h2 class="subtitle">NeosVR <strong>non</strong> Exhaustive Communites Events Aggregator</h2>
                 <h3 class="subsubtitle">— by GrayBoltWolf and Brodokk</h3>
