Fix bug for show resonite streams

--- a/templates/index.html
+++ b/templates/index.html
@@ -361,6 +361,7 @@
                   <p>
                     <ul>
                       <li>Change main domain from <code>resonite-community.events</code> to <code>resonite-communities.com</code></li>
+                      <li>Fix Resonite related streams not showing up</li>
                     </ul>
                   </p>
                 </div>
