--- a/templates/index.html
+++ b/templates/index.html
@@ -286,7 +286,7 @@
               </div>
             </div>
             {% else %}
-            <article class="message">
+            <article class="message is-warning">
               <div class="message-body content">
                 It doesn't seem there are currently any public events planned. <strong>But</strong> remember:
 
@@ -301,6 +301,11 @@
           </div>
 
           <div id="Streams" class="content-tab" style="display:{{tab|tab_display('Streams')}}">
+
+            <article class="message is-info">
+              <div class="message-body content">
+                Resonite related streams in the 7 following days
+            </article>
 
             {% for stream in streams %}
             <div class="container stream">
@@ -326,7 +331,7 @@
               </div>
             </div>
             {% else %}
-            <article class="message">
+            <article class="message is-warning">
               <div class="message-body content">
                 It doesn't seem there are currently any streams planned. <strong>But</strong> remember:
 
@@ -350,7 +355,7 @@
               <br>
 
               <p>For now the two domains <code>resonite.boltwolf.net</code> and <code>resonite-communities.com</code> are delivering the same service run by the same group of person.</p>
-              <h2>News</h2>
+              <h2>Changelog</h2>
 
               <div class="box">
                 <div class="content">
@@ -362,6 +367,7 @@
                     <ul>
                       <li>Change main domain from <code>resonite-community.events</code> to <code>resonite-communities.com</code></li>
                       <li>Fix Resonite related streams not showing up</li>
+                      <li>Small UI fixes</li>
                     </ul>
                   </p>
                 </div>
