--- a/templates/index.html
+++ b/templates/index.html
@@ -342,6 +342,50 @@
               </div>
             </article>
             {% endfor %}
+
+            <article class="message is-dark">
+              <div class="message-header" id="info_toggle">
+                <p>Resonite streamers followed</p>
+                <span class="icon">
+                  <i class="fas fa-angle-up" aria-hidden="true"></i>
+                </span>
+              </div>
+              <div class="message-body" id="info">
+                <article class="message is-info">
+                  <div class="message-body content">
+                    <p>Want your stream listed here? Any questions? Check the <span onclick="openTab(event,'About')"><a>About</a></span> section.</p>
+                  </div>
+                </article>
+                <div class="columns is-multiline">
+                  {% for streamer in streamers %}
+                  <div class="column is-one-quarter">
+                  <div class="card">
+                    <div class="card-image">
+                      <figure class="image is-3by3">
+                        <img src="{{ streamer[2] }}" alt="Placeholder image">
+                      </figure>
+                    </div>
+                    <div class="card-content">
+                      <div class="media">
+                        <div class="media-content">
+                          <p class="title is-4">{{ streamer[0] }}</p>
+                          <p class="subtitle is-6">{{ streamer[1] }} followers</p>
+                        </div>
+                      </div>
+
+                      <div class="content" style="height: 250px; overflow: hidden;">
+                        {{ streamer[3] | urlize }}
+                      </div>
+                      <footer class="card-footer">
+                        <a href="https://www.twitch.tv/{{ streamer[0] }}" class="card-footer-item button is-info">Visit channel</a>
+                      </footer>
+                    </div>
+                  </div>
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+            </article>
           </div>
 
           <div id="About" class="content-tab" style="display:{{tab|tab_display('About')}}">
@@ -366,6 +410,7 @@
                   <p>
                     <ul>
                       <li>Change main domain from <code>resonite-community.events</code> to <code>resonite-communities.com</code></li>
+                      <li>Add list of resonite streamers followed</li>
                       <li>Fix Resonite related streams not showing up</li>
                       <li>Small UI fixes</li>
                     </ul>
