--- a/templates/index.html
+++ b/templates/index.html
@@ -762,7 +762,7 @@
     const dates_start = document.querySelectorAll(".date .start");
 
     dates_start.forEach((date_start) => {
-      parsed_date = new Date(Date.parse(date_start.innerHTML + " 2022 UTC"));
+      parsed_date = new Date(Date.parse(date_start.innerHTML + " " + new Date().getFullYear() + " UTC"));
       date_start.innerText = parsed_date.toLocaleDateString(
         'en-us', {
           weekday:"short", year:"numeric", month:"short", day:"numeric", hour: "numeric", minute: "numeric"
@@ -772,7 +772,7 @@
     const dates_end = document.querySelectorAll(".date .end");
 
     dates_end.forEach((date_end) => {
-      parsed_date = new Date(Date.parse(date_end.innerHTML + " 2022 UTC"));
+      parsed_date = new Date(Date.parse(date_end.innerHTML + " " + new Date().getFullYear() + " UTC"));
       date_end.innerText = parsed_date.toLocaleDateString(
         'en-us', {
           weekday:"short", year:"numeric", month:"short", day:"numeric", hour: "numeric", minute: "numeric"
