--- a/templates/index.html
+++ b/templates/index.html
@@ -454,6 +454,20 @@
               <h2>Changelog</h2>
 
               <div class="box">
+                  <div class="content">
+                    <strong>Release 3.1.1</strong>
+                    &nbsp;
+                    <small>2023-11-30</small>
+                    <br>
+                    <p>
+                      <ul>
+                        <li>Fix external events update</li>
+                        <li>Fix date on web client (no hardcoded year)</li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+
                 <div class="content">
                   <strong>Release 3.1</strong>
                   &nbsp;
