--- a/templates/index.html
+++ b/templates/index.html
@@ -752,7 +752,7 @@
       try {
         var successful = document.execCommand('copy');
         var msg = successful ? 'successful' : 'unsuccessful';;
-        setStatusCopyBtn('Success copy resonitedb url', 'is-success');
+        setStatusCopyBtn('Successfuly copied resonitedb url', 'is-success');
       } catch (err) {
         setStatusCopyBtn('Error copy resonitedb url', 'is-danger');
       }
